# jobhunter

./: .env.example  .gitignore  README.md  docker-compose.yml  jobhunter-spec.md
.github/workflows/: test.yml
backend/: Dockerfile  celerybeat-schedule  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_llm_calls.py  0003_multi_profile.py  0004_user_secrets.py
backend/app/: __init__.py  celery_app.py  config.py  db.py  logging_setup.py  main.py
backend/app/appliers/: __init__.py  base.py
backend/app/auth/: dependencies.py  passwords.py  tokens.py
backend/app/models/: __init__.py  _mixins.py  _types.py  application.py  audit.py  job.py  llm_call.py  match.py  portal_session.py  profile.py  search_criteria.py  user.py  user_secret.py
backend/app/routers/: _cv_render.py  account.py  admin.py  auth.py  costs.py  criteria.py  matches.py  profiles.py  queue.py  scrapers.py  tracking.py
backend/app/schemas/: auth.py  criteria.py  matches.py  profile.py
backend/app/scrapers/: __init__.py  _jobint.py  base.py  bumeran.py  clarin.py  computrabajo.py  linkedin.py  portal_empleo_ba.py  zonajobs.py
backend/app/scripts/: bootstrap_admin.py
backend/app/services/: api_keys.py  audit.py  cv_parser.py  docx_render.py  encryption.py  generator.py  llm.py  llm_pricing.py  pdf.py  scoring.py  storage.py
backend/app/workers/: apply_tasks.py  generate_tasks.py  score_tasks.py  scrape_tasks.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_health.py  test_multitenant.py
backend/tests/unit/: test_encryption.py  test_tokens.py
frontend/: index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: deploy.sh
(+16 files in other folders)
