[project]
name = "jobhunter"
version = "0.1.0"
description = "JobHunter - sistema multi-tenant de búsqueda y postulación asistida a empleos"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic[email]>=2.9",
  "pydantic-settings>=2.6",
  "email-validator>=2.2",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "bcrypt>=4.0,<4.1",
  "python-multipart>=0.0.12",
  "cryptography>=43",
  "celery[redis]>=5.4",
  "redis>=5.0",
  "flower>=2.0",
  "anthropic>=0.39",
  "minio>=7.2",
  "httpx>=0.27",
  "selectolax>=0.3",
  "beautifulsoup4>=4.12",
  "playwright>=1.48",
  "weasyprint>=63",
  "markdown-it-py>=3",
  "python-docx>=1.1",
  "structlog>=24",
  "sentry-sdk[fastapi,celery]>=2.18",
  "slowapi>=0.1.9",
  "tenacity>=9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5",
  "httpx>=0.27",
  "ruff>=0.7",
  "mypy>=1.13",
  "types-passlib",
  "factory-boy>=3.3",
  "freezegun>=1.5",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "A", "C4", "PT"]
ignore = ["E501", "S101", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
